k8s/addons/emqx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-headless
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: iotea
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtt-ws
      port: 8083
      targetPort: 8083
    - name: ekka
      port: 4370
      targetPort: 4370
    - name: cluster-rpc
      port: 5370
      targetPort: 5370
---
apiVersion: v1
kind: Service
metadata:
  name: emqx
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: iotea
spec:
  selector:
    app.kubernetes.io/name: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtt-ws
      port: 8083
      targetPort: 8083
    - name: dashboard
      port: 18083
      targetPort: 18083
---
apiVersion: v1
kind: Service
metadata:
  name: emqx-dashboard
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: iotea
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: emqx
  ports:
    - name: dashboard
      port: 18083
      targetPort: 18083
      nodePort: 30083
